# ogumsoftware

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  app.ipynb  diagnostics.py  docker-compose.dev.yml  docker-compose.yml  environment.yml  ipywidgets.py  modulo4_simulacao_hibrida.py  ogum64  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: benchmarks.yml  bump.yml  ci.yml  codeql.yml  deploy.yml  gh-pages.yml  publish.yml  pytest.yml
IPython/: __init__.py  display.py
api/: __init__.py  fem_router.py  main.py
app/: __init__.py  ui.py
benchmarks/: baseline.csv  benchmark_fem.py
core/: __init__.py  solver.py
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/tutorials/: index.rst  run_simulation.ipynb  run_simulation.rst  upload_data.ipynb  upload_data.rst
fem/: solver.py
notebooks/: FEM_example.ipynb  fzea.ipynb  interactive_mesher_prototype.ipynb  ogum64.ipynb  ogum80.ipynb  validation_cases.ipynb
ogum/: __init__.py  api.py  core.py  fem_interface.py  final_report.py  fzea.py  material_calibrator.py  mesh_generator.py  ogum64.py  ogum72.py  ogum80.py  plotting.py  processing.py  sovs.py  style.css  utils.py
src/ogum/: __init__.py  api.py  cli.py  cms.py  config.py  core.py  data_refinement.py  fem_interface.py  final_report.py  master_curve.py  material_calibrator.py  mesh_generator.py  mesh_generator_ui.py  processing.py  stats.py
src/ogum/api/: __init__.py  router.py  routes.py  schemas.py
tests/: conftest.py  test_api.py  test_api_routes.py  test_cli.py  test_config.py  test_fem.py  test_fem_real.py  test_final_report.py  test_imports.py  test_master_curve.py  test_material_calibrator.py  test_mesh_generator.py  test_processing.py  test_processing_logtheta.py  test_solver.py  test_sovs.py  test_sovs_physical.py  test_stats.py  test_utils.py
tests/api/: test_routes.py
