[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ogum_sintering_suite"
version = "0.1.0"
authors = [
  { name="Huyrá Araujo", email="huyraestevao@ifsp.edu.br" },
]
description = "A suite for analyzing sintering processes."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ogum*"]

[tool.ruff]
line-length = 88
exclude = [
    "IPython/*",
    "notebooks/*",
    "*.ipynb",
    "tests/conftest.py",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["D"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D103", "D105"]

[tool.ruff.format]

